[package]
name = "Kairos"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
env_logger = "0.11.10"
log = "0.4.29"
logging = "0.1.0"
pingora = "0.8.0"
pingora-core = "0.8.0"
pingora-http = "0.8.0"
pingora-load-balancing = "0.8.0"
pingora-proxy = "0.8.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
