[package]
name = "Kairos"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream      = "0.3"
async-trait       = "0.1.89"
axum              = { version = "0.8.8", features = ["macros"] }
bytes             = "1"
dashmap           = "6.1.0"
futures-util      = "0.3"
reqwest           = { version = "0.13.2", features = ["json"] }
serde             = { version = "1.0.228", features = ["derive"] }
serde_json        = "1.0.149"
tokio             = { version = "1.50.0", features = ["full"] }
tower-http        = "0.6.8"
tower             = { version = "0.5", features = ["util"] }
tracing           = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
mockito = "1.7"
hyper = { version = "1", features = ["server", "http1"] }
http-body-util = "0.1"
